# taby-v1

src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: adblock.rs  main.rs  sync.rs  vault.rs
src/components/Browser/: AutoUpdater.jsx  BrowserChrome.jsx  TabBar.jsx
taby/: package.json
taby/src/: App.jsx
taby/src-tauri/: tauri.conf.json
taby/src-tauri/src/: commands.rs  importer.rs  universal_viewer.rs  updater.rs
taby/src/components/Apps/: TabyMeet.jsx
taby/src/styles/: globals.css
